# MFR

./: .replit  Procfile  app.py  config.py  create_backup.sh  email_utils.py  forms.py  main.py  models.py  pyproject.toml  requirements.txt
backup/: config.py  db_check.py  forms.py  main.py  models.py  requirements.txt
backup/static/css/: styles.css
backup/static/js/: calendar.js  main.js
backup/templates/: admin.html  base.html  booking_form.html  debug_sample_data.html  login.html  property_details.html
migrations/versions/: 28d3f1fee956_add_salt_column_to_user_model.py  53070bdfda50_add_booking_units_table.py
static/css/: styles.css
static/js/: calendar.js
templates/: admin.html  admin_database.html  base.html  booking_form.html  properties.html  property_details.html
