[tool.poetry]
name = "repl-nix-familyvacationbooker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
email-validator = "^2.2.0"
flask-mail = "^0.10.0"
werkzeug = "^3.0.4"
wtforms = "^3.1.2"
sqlalchemy = "^2.0.35"
sqlalchemy-utils = "^0.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
